# mockaroo-pyapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  main.py  pyproject.toml
output/: companies.json
schema/: companies.schema.json  customers.schema.json  employees.schema.json  orders.schema.json  users.schema.json
